fixed overlapping issue on deo page

--- a/skin/frontend/default/star-aurelia-responsive/css/mobile.css
+++ b/skin/frontend/default/star-aurelia-responsive/css/mobile.css
@@ -907,7 +907,7 @@ body.checkout-cart-index .title-buttons .btn-proceed-checkout span span {
 /***********/
 
 .back-product {
-	top: 80px;
+	top: 110px;
 }
 .catalog-product-view .mob-product-content h1 {
 	font-size: 16px; letter-spacing:0.1em;
